...
            "state" : "translated",
            "value" : "住屋"
          }
        }
      }
    },
    "HowMuch" : {

    },
    "iCloud" : {
      "comment" : "Field\nSection\nSettings tab",
      "localizations" : {
        "zh-Hans" : {
...
            "state" : "translated",
            "value" : "靛藍色"
          }
        }
      }
    },
    "Insights" : {
      "comment" : "Screen title",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "洞察"
...
    "Ledger Settings" : {
      "comment" : "Toolbar"
    },
    "Ledger total" : {
      "comment" : "Field"
    },
    "Ledgers" : {
      "comment" : "Screen title\nSidebar title",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "账本"
...
        }
      }
    },
    "Setting Up…" : {
      "comment" : "Sync status"
    },
    "Settings" : {
      "comment" : "Screen title\nSidebar action\nToolbar\niOS settings app name",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "设置"
...
